[refactor] : FE - UI 코드 정리

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,7 +12,7 @@
 
 <div class="img-container">
     <div class="img-wrapper">
-        <img src="/img/test5.jpeg" class="img-fluid">
+        <img src="/images/test5.jpeg" class="img-fluid">
         <p class="img-explain">그림 설명</p>
     </div>
 </div>
